@@ -1,3 +1,11 @@
+2009-01-06  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	PR fortran/38220
+	* interface.c (gfc_procedure_use):  Don't warn about functions
+	from ISO_C_BINDING.
+	* symbol.c (generate_isocbinding_symbol):  Mark c_loc and
+	c_funloc as pure.
+
 2009-01-05  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/38657
